--- a/Views/CartItems/Delete.cshtml
+++ b/Views/CartItems/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model TCGShop.Models.Product
+﻿@model TCGShop.Models.CartItem
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,38 +9,32 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Product</h4>
+    <h4>CartItem</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
+            @Html.DisplayNameFor(model => model.CreatedTime)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
+            @Html.DisplayFor(model => model.CreatedTime)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.Quantity)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
+            @Html.DisplayFor(model => model.Quantity)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Img)
+            @Html.DisplayNameFor(model => model.ID_Cart)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Img)
+            @Html.DisplayFor(model => model.ID_Cart)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
+            @Html.DisplayNameFor(model => model.ID_Product)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ID_ProductType)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ID_ProductType)
+            @Html.DisplayFor(model => model.ID_Product)
         </dd>
     </dl>
     
