--- a/Views/CartItems/Index.cshtml
+++ b/Views/CartItems/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TCGShop.Models.Product>
+﻿@model IEnumerable<TCGShop.Models.CartItem>
 
 @{
     ViewData["Title"] = "Index";
@@ -14,19 +14,16 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Title)
+                @Html.DisplayNameFor(model => model.CreatedTime)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
+                @Html.DisplayNameFor(model => model.Quantity)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Img)
+                @Html.DisplayNameFor(model => model.ID_Cart)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ProductType)
+                @Html.DisplayNameFor(model => model.ID_Product)
             </th>
             <th></th>
         </tr>
@@ -35,19 +32,16 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Title)
+                @Html.DisplayFor(modelItem => item.CreatedTime)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
+                @Html.DisplayFor(modelItem => item.Quantity)
             </td>
             <td>
-                <img width="50px" height="50px" src="@Html.DisplayFor(modelItem => item.Img)" alt="Alternate Text" />
+                @Html.DisplayFor(modelItem => item.ID_Cart)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ID_ProductType)
+                @Html.DisplayFor(modelItem => item.ID_Product)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
