--- a/Views/Carts/Details.cshtml
+++ b/Views/Carts/Details.cshtml
@@ -45,6 +45,11 @@
     <p><a class="btn btn-warning" href="/Orders/MakeOrder">Make Order</a></p>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    @{
+        if (ViewBag.IsAdmin)
+        {
+            <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a>
+            <a asp-action="Index">Back to List</a>
+        }
+    }
 </div>
