--- a/Views/CartItems/Create.cshtml
+++ b/Views/CartItems/Create.cshtml
@@ -41,6 +41,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index"><button type="button" class="btn btn-secondary">Back to list</button></a>
 </div>
 
