--- a/Views/DeliveryTypes/Index.cshtml
+++ b/Views/DeliveryTypes/Index.cshtml
@@ -26,9 +26,9 @@
                 @Html.DisplayFor(modelItem => item.Type)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.ID"><button type="button" class="btn btn-secondary">Edit</button></a> |
+                <a asp-action="Details" asp-route-id="@item.ID"><button type="button" class="btn btn-secondary">Details</button></a> |
+                <a asp-action="Delete" asp-route-id="@item.ID"><button type="button" class="btn btn-secondary">Delete</button></a>
             </td>
         </tr>
 }
