--- a/Views/Orders/Details.cshtml
+++ b/Views/Orders/Details.cshtml
@@ -52,6 +52,6 @@
 <h2>Total price: @total</h2>
 
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.ID"><button type="button" class="btn btn-secondary">Edit</button></a> |
+    <a asp-action="Index"><button type="button" class="btn btn-secondary">Back to list</button></a>
 </div>
