--- a/Views/Home/Permissions.cshtml
+++ b/Views/Home/Permissions.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "GTFO";
+    ViewData["Title"] = "You are not allowed to do this!";
 }
 
 <div class="text-center">
-    <h1 class="display-4">You are not allowed to use this controller!</h1>
-    <p>Only administrator can do it!</p>
+    <h1 class="display-4">You are not allowed to do this!</h1>
 </div>
