--- a/Views/Products/Create.cshtml
+++ b/Views/Products/Create.cshtml
@@ -33,6 +33,18 @@
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
+
+            <br />
+            1 - Card
+            <br />
+            2 - Sealed product
+            <br />
+            3 - Accesory
+            <br />
+            0 - Other product
+            <br />
+            <br />
+
             <div class="form-group">
                 <label asp-for="ID_ProductType" class="control-label"></label>
                 <input asp-for="ID_ProductType" class="form-control" />
