--- a/Views/Carts/Details.cshtml
+++ b/Views/Carts/Details.cshtml
@@ -1,4 +1,5 @@
 ﻿@model TCGShop.Models.Cart
+@using Microsoft.AspNet.Identity
 
 @{
     ViewData["Title"] = "Details";
@@ -10,41 +11,48 @@
 <div>
     <h4>Cart</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedTime)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedTime)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ID_Customer)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ID_Customer)
-        </dd>
-    </dl>
 
-    <div class="row mt-5 mb-2">
-    @{
-        float subtotal = 0;
-
-        foreach (Product item in (IEnumerable<Product>)ViewData["PIL"])
-        {
-            subtotal += item.Price;
-
-            <div class="col-lg-4">
-                <img class="img-thumbnail" src="@item.Img" alt="@item.Title" />
-                <h2>@item.Title</h2>
-                <p>Price: @item.Price.ToString("c")</p>
-            </div>
+        @{
+            if (User.Identity.GetUserId() == "e63830c1-9176-4b57-9946-c91277275e40")
+            {
+            <dl>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.CreatedTime)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.CreatedTime)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.ID_Customer)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.ID_Customer)
+                </dd>
+            </dl>
+            }
         }
 
-        float tax = subtotal * 0.21f;
-        float total = subtotal * 1.21f;
 
-    }
-</div>
+    <div class="row mt-5 mb-2">
+        @{
+            float subtotal = 0;
+
+            foreach (Product item in (IEnumerable<Product>)ViewData["PIL"])
+            {
+                subtotal += item.Price;
+
+                <div class="col-lg-4">
+                    <img class="img-thumbnail" src="@item.Img" alt="@item.Title" />
+                    <h2>@item.Title</h2>
+                    <p>Price: @item.Price.ToString("c")</p>
+                </div>
+            }
+
+            float tax = subtotal * 0.21f;
+            float total = subtotal * 1.21f;
+
+        }
+    </div>
     <h4>Price: @subtotal.ToString("c2");</h4>
     <h4>Taxes: @tax.ToString("c2");</h4>
     <h3>Total price: @total.ToString("c2");</h3>
